data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3095.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\60"
    "\02\7f\7f\01\7f\60\00\01\7f\02\8c\80\80\80\00\01"
    "\04\6d\61\74\68\03\61\64\64\00\00\03\83\80\80\80"
    "\00\02\00\01\0a\9d\80\80\80\00\02\89\80\80\80\00"
    "\00\20\00\20\01\10\00\0f\0b\89\80\80\80\00\00\41"
    "\01\41\02\10\01\0f\0b"
  )
""
)